# XPay

./: .gitignore  README.md  docker-compose.yml  pre_commit.sh
.github/workflows/: CI.yml
server/: .pylintrc  Dockerfile  entrypoint.sh  lint.sh  pyproject.toml  server_key  server_key.pub  test.sh
server/alembic/: env.py
server/alembic/versions/: 56d7e40c6526_create_keys_table.py  ad8168d2f0e9_create_transactions_table.py  f42d0dfcd4a5_create_users_table.py
server/app/: __init__.py  conftest.py  datamodels.py  exceptions.py  main.py  middleware.py  settings.py  test_base.py
server/app/auth/: datamodels.py  db_crud.py  db_models.py  endpoints.py  policies.py  test_auth.py  utils.py
server/app/crypto_utils/: __init__.py  datamodels.py  db_crud.py  db_models.py  encryption_provider.py  endpoints.py  enums.py
server/app/database/: seed.py
server/app/payments/: datamodels.py  db_crud.py  db_models.py  endpoints.py  enums.py  test_payments.py
server/app/utils/: __init__.py
