[tool.poetry]
name = "xpay"
version = "0.1.0"
description = ""
authors = ["Sidharth <sidharthajithkumar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.8.0"
cryptography = "^37.0.2"
fastapi = "^0.78.0"
sqlalchemy = "1.4.37"
sqlalchemy_utils = "^0.38.2"
uvicorn = "^0.17.6"
psycopg2-binary = "^2.9.3"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pylint = "^2.14.1"
pytest = "^7.1.2"
Faker = "^13.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
